--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
-   
 
     <!-- font-awesome icons -->
     <script src="https://kit.fontawesome.com/6ef669b9cc.js" crossorigin="anonymous"></script>
@@ -117,7 +116,7 @@
               	<img src="img/background.png" class="img" alt="">
             </div>
             <div class="col-md-4">
-		    	<h1>Algo Trading Made simple</h1>
+		    	<h1 class="fw-bold">Algo Trading Made simple</h1>
 		        <p>Get 80% accuracy in our signals and trade automatically on your prepared broker</p>
 		        <div class="row">
 		        	<button class="btn oval-btn btn-primary fw-bold" style="width:200px;">Get LifeTime Free***</button>
@@ -495,5 +494,10 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.bundle.min.js"></script>
 
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
