--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- font-awesome icons -->
     <script src="https://kit.fontawesome.com/6ef669b9cc.js" crossorigin="anonymous"></script>
@@ -89,13 +89,13 @@
 		              <a href="#" class="nav-link text-secondary">Support</a>
 		            </div>
 		            <div class="col"> 
-		              <a href="#" class="nav-link text-secondary">Login</a>
+		              <a href="#" class="nav-link text-secondary" onclick="changebtnColor()">Login</a>
 		            </div>
          		</ul>     
           	</div>
           	<ul class="nav navbar-nav">
 	                <li class="nav-item"> 
-	                  <a href="#" class="btn oval-btn btn-primary active fw-bold " aria-current="page" style="width:150px;">Sign Up</a>
+	                  <a href="#" class="btn oval-btn btn-primary active fw-bold " onclick="openAlertBox('Im signup button')" aria-current="page" style="width:150px;" id="signup_button">Sign Up</a>
 	                </li>
             	
             </ul>
@@ -491,13 +491,18 @@
 
 
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.bundle.min.js"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    -->
+    <script type="text/javascript">
+    	
+    	function openAlertBox(msg){
+    		alert(msg);
+    	}
+
+    	function changebtnColor(){
+    		document.getElementById('signup_button').style.backgroundColor = 'Red'; 
+    	}
+    </script>
   </body>
 </html>
